
  * Support Launchpadlib 1.9. (LP: #725231, #725092)
  * Remove manage-credentials, and credential handling code from
    ubuntutools.lp.libsupport. Launchpadlib 1.9 handles this via
    python-keyring. (LP: #387297, #645629, #689100)
  * Remove ubuntutools.lp.libsupport.translate_api_web, no longer used.
  * Remove ubuntutools.lp.libsupport.approve_application, no longer used.

 -- Stefano Rivera <stefanor@debian.org>  Mon, 28 Feb 2011 23:55:25 +0200

ubuntu-dev-tools (0.118) unstable; urgency=low

  * requestsync: Use from...import require_utf8() to work around unexpected
    scoping from a later import (LP: #723630)
  * Add myself to Uploaders.

 -- Stefano Rivera <stefanor@debian.org>  Wed, 23 Feb 2011 15:21:32 +0200

ubuntu-dev-tools (0.117) unstable; urgency=low

  [ Benjamin Drung ]
  * dgetlp, import-bug-from-debian, suspicious-source:
    Show error messages instead of having the import errors for
    recommended packages (Closes: #613101, LP: #693813).
  * update_maintainer.py: Update Maintainer field if it is set to
    "Ubuntu Core Developers <ubuntu-devel@lists.ubuntu.com>".

  [ Stefano Rivera ]
  * ubuntutools/archive.py: Rewrite launchpadlib redirects to https when
    fetching dscs.
  * debian/control:
    - Suggest qemu-user-static | qemu-kvm-extras-static. Ubuntu provides a
      qemu-user-static package, like Debian, since natty.
    - Drop Build-Depend on Recommend on libapt-pkg-perl. No longer used.
  * grab-merge: Show help when no arguments are provided.
  * pull-revu-source: Check for the availability of libwww-perl, and print a
    more helpful error.
  * requestsync, grep-merges: Require a UTF-8 locale. (Closes: #613114,
    LP: #553795)

 -- Benjamin Drung <bdrung@debian.org>  Tue, 22 Feb 2011 00:42:33 +0100

ubuntu-dev-tools (0.116) unstable; urgency=low

  [ Benjamin Drung ]
  * suspicious-source:
    - Add .icns and .java to extension whitelist.
    - Add image/vnd.adobe.photoshop to the mime-type whitelist.