@@ -6,8 +6,9 @@ ubuntu-dev-tools (0.119) UNRELEASED; urgency=low
     python-keyring. (LP: #387297, #645629, #689100)
   * Remove ubuntutools.lp.libsupport.translate_api_web, no longer used.
   * Remove ubuntutools.lp.libsupport.approve_application, no longer used.
+  * Use Launchpadlib.login_with() directly in scripts.
 
- -- Stefano Rivera <stefanor@debian.org>  Mon, 28 Feb 2011 23:55:25 +0200
+ -- Stefano Rivera <stefanor@debian.org>  Tue, 01 Mar 2011 00:30:29 +0200
 
 ubuntu-dev-tools (0.118) unstable; urgency=low
 
